--- a/apologize.css
+++ b/apologize.css
@@ -10,7 +10,7 @@ section
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background: radial-gradient(#FF597B,#FF597B);
+	background: radial-gradient(#205295,#0A2647);
 	overflow: hidden;
 	display: flex;
 	justify-content: center;
@@ -270,5 +270,5 @@ p
 	margin-left: 30px;
 	margin-right: 50px;
 	width: 40vh;
-
+	color: #F8F4EA;
 }
