--- a/apologize.css
+++ b/apologize.css
@@ -10,7 +10,7 @@ section
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background: radial-gradient(#FFBABA,#C85C8E);
+	background: radial-gradient(#86E5FF,#5BC0F8);
 	overflow: hidden;
 	display: flex;
 	justify-content: center;
